# open-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  __main__.py  alembic.ini  cli.py  config.py  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
alembic/: env.py
alembic/versions/: 20260330_01_add_owner_user_id_columns.py  20260330_02_add_run_ledger.py
api/: middleware.py
api/endpoints/: auth.py  chat.py  jobs.py  mcp.py  memory.py  pages.py  runs.py  sandbox.py  sessions.py  settings.py  skills.py  workspace.py
bundled_skills/coding-pipeline/: SKILL.md
bundled_skills/debug/: SKILL.md
bundled_skills/find/: SKILL.md
bundled_skills/impl/: SKILL.md
bundled_skills/plan/: SKILL.md
bundled_skills/review/: SKILL.md
bundled_skills/skill-creator/: SKILL.md
bundled_skills/test/: SKILL.md
core/: agent.py  exceptions.py  fuzzy.py  grep_engine.py  job_executor.py  job_manager.py  job_scheduler.py  llm.py  logging.py  mcp_manager.py  memory_manager.py  page_manager.py  page_tools.py  page_wrapper.py  request_context.py  run_manager.py  sandbox.py  session_manager.py  settings_manager.py  skill_manager.py  task_supervisor.py  tool_errors.py  tool_registry.py  unified_tools.py  workflow_router.py  workspace_manager.py  workspace_tools.py
core/auth/: __init__.py  config.py  dependencies.py  jwt.py  password.py  rate_limit.py  service.py
core/db/: __init__.py  engine.py  migrate.py
docs/: architecture.md  deployment.md  sprint-4-plan.md  stabilization-policy.md  supported-scope.md  upgrade.md
models/: __init__.py  _base.py  auth.py  error.py  job.py  mcp.py  memory.py  page.py  run.py  session.py  settings.py  skill.py  workspace.py
nexus_rust/: __init__.py
static/: __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  jobs.html  pages.html  settings.html  skills.html  skills.txt  tools.html  tools.txt  workspace.html  workspace.txt
static/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
static/jobs/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.jobs.__PAGE__.txt
static/pages/: __next._full.txt  __next._tree.txt  __next.pages.__PAGE__.txt  viewer.html  viewer.txt
static/settings/: __next._full.txt  __next._tree.txt  __next.settings.__PAGE__.txt
static/skills/: __next._tree.txt  __next.skills.__PAGE__.txt
static/tools/: __next._head.txt  __next._tree.txt  __next.tools.__PAGE__.txt
static/workspace/: __next._tree.txt  __next.workspace.__PAGE__.txt  viewer.html  viewer.txt
tests/: conftest.py
tests/auth/: test_auth_api.py  test_jwt.py  test_password.py
tests/integration/: test_chat_api.py  test_jobs_api.py  (+9 more)
(+97 files in other folders)
